ui/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');

/* ================= Table Styling ================= */
table, th, td {
    border: 1px solid black;
    text-align: center;
}
th, thead td {
    padding: 0.3em 2em;
}
td {
    padding: 0.3em 0.5em;
}
tr {
    height: 2em;
    font-size: 1.2em;
}
thead tr { background-color: lightsteelblue;}
thead th { background-color: lightsteelblue;}
:not(thead) > tr:nth-child(odd) {background-color: #f2f2f2;}
:not(thead) > tr.title-row {
    background-color: lightsteelblue;   
}

.row-option {
    margin-left: 0.25em;
    margin-right: 0.25em;
}
.row-options {
    cursor:default;
}
table.checklist:not(.no-hover-highlight) :not(thead) > tr:hover {
    background-color: lightskyblue;
    cursor: pointer;
}
table.checklist td {
    text-align: left;
    padding-right: 1.2em;
}

/* ============= List Component Styling ============= */
.list-component td, .list-component th {
    padding-left: 0.5em;
    padding-right: 0.5em;
}
.list-component .row-entry:hover, 
.list-component th:not(.no-hover-highlight):hover {
    background-color: lightskyblue;
    cursor:pointer;
}
.list-component th.default-cursor, .list-component th.default-cursor:hover {
    cursor: default;
}
.list-component .down-arrow {
    transform: rotate(90deg);
    display: inline-block;
}
.list-component .up-arrow {
    transform: rotate(270deg);
    display: inline-block;
}

/* =========== Details Component Styling ============ */
.details-component .details-table td, .details-component .details-table th {
    padding: 0.25em;
    font-size: 1.2em;
}
.details-component button {
    font-size: 1.3em;
    margin-left: 0.25em;
    margin-right: 0.25em;
}

/* =========== Form Component Styling ============ */
.form-component .form-button {
    width: 50%;
    padding: 0.5em 0em;
}

/* ================= Input Styling ================= */

/*Hide Up and Down arrows in Number Input elements*/
input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type="number"] {
    -moz-appearance: textfield;
}
/* Hide Arrows and X Button for Datetime Input */
input[type=datetime-local]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    display: none;
}

/* ================ General Styling ================ */
.centered {
    margin: auto;
}
button.new-entry {
    font-size: 115%;
}
.link {
    color: blue;
    text-decoration: underline;
    cursor: pointer;
}
.full-width {
    width: 100%;
}
.full-width-centered {
    width: 100%;
    text-align: center;
}
.slight-margin-top {
    margin-top: 0.25em;
}

